--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="br.com.deliciagelada.deliciagelada.MainActivity"
+    tools:context="br.com.deliciagelada.deliciagelada.Activities.MainActivity"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
